@@ -94,7 +94,7 @@ STRING("text/x-vCalendar")
 STRING("text/x-vCard")
 STRING("text/vnd.wap.wml")
 STRING("text/vnd.wap.wmlscript")
-STRING("applicatoin/vnd.wap.catc")
+STRING("application/vnd.wap.catc")
 STRING("Multipart/*")
 STRING("Multipart/mixed")
 STRING("Multipart/form-data")
